<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kennyrep.droidcafe.MainActivity">

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:textSize="@dimen/text_heading"
        android:padding="@dimen/padding_regular"/>

    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_dessert"
        android:layout_below="@id/textintro"
        android:padding="@dimen/padding_regular"/>
    
    <ImageView
        android:id="@+id/donut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:contentDescription="@string/donut"
        android:src="@drawable/donut_circle"
        android:layout_below="@+id/choose_dessert"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textintro"
        android:layout_alignEnd="@+id/textintro"
        android:onClick="showDonutOrder"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddind_wide"
        android:text="@string/donut"
        android:layout_alignTop="@+id/donut"
        android:layout_toRightOf="@+id/ice_cream"
        android:layout_toEndOf="@+id/ice_cream" />

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:contentDescription="@string/ice_cream_sandwiches"
        android:src="@drawable/icecream_circle"
        android:layout_below="@+id/donut"
        android:onClick="showIceCreamOrder"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddind_wide"
        android:text="@string/ice_cream_sandwiches"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/ice_cream"
        android:layout_toEndOf="@+id/ice_cream" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:contentDescription="@string/froyo"
        android:src="@drawable/froyo_circle"
        android:layout_below="@+id/ice_cream"
        android:onClick="showFroyoOrder"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddind_wide"
        android:text="@string/froyo"
        android:layout_alignTop="@+id/froyo"
        android:layout_toRightOf="@+id/froyo"
        android:layout_toEndOf="@+id/froyo"
        android:layout_marginTop="54dp" />
</RelativeLayout>
</ScrollView>